# StaffFlashcard

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  audioProcessor.cpp  audioProcessor.hpp  main.cpp  main.hpp  staff.cpp  staff.hpp  types.cpp  types.hpp
src/: audioProcessor.cpp  audioProcessor.hpp  audioSetup.cpp  audioSetup.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  constants.hpp  main.cpp  main.hpp  pressable.hpp  staff.cpp  staff.hpp  staffSetup.cpp  staffSetup.hpp  toggleButton.cpp  toggleButton.hpp  types.cpp  types.hpp
